# premier

./: .gitignore  JOURNAL.md  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt
data/raw/: pl_23_24.csv
notebooks/: 01_first_approach.ipynb  02_eda_and_first_model.ipynb
