[tool.poetry]
name = "premier-league"
version = "0.1.0"
description = "Premier League Games predictor"
authors = ["panza238 <ezequiel.panzarasa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
ipython = "^8.20.0"
ipykernel = "^6.29.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
